fix: solved layout issues with max line length elements within thirds layouts

--- a/manon/footer-two-thirds-one-third.scss
+++ b/manon/footer-two-thirds-one-third.scss
@@ -34,26 +34,25 @@ body > footer,
         width: 100%;
 
         > * {
+            max-width: 100%;
             width: 100%;
             box-sizing: border-box;
         }
 
-        > span, 
-        > p,
-        > a,
-        > span,
-        > li {
-            max-width: 100%;
+        > section,
+        > article,
+        > div {
+            padding: 0;
         }
 
         @media (min-width: $breakpoint) {
-            gap: var(----footer-two-thirds-one-third-gap);
+            gap: var(--layout-two-thirds-one-third-breakpoint-1-gap);
 
             > * {
-                width: 33.33%;
+            width: 33.33%;
 
-                &:nth-child(odd) {
-                    width: calc(66.66% - var(--footer-two-thirds-one-third-gap));
+            &:nth-child(odd) {
+                    width: calc(66.66% - var(--layout-two-thirds-one-third-gap));
                 }
             }
         }
