--- a/manon/layout-two-thirds-one-third.scss
+++ b/manon/layout-two-thirds-one-third.scss
@@ -13,7 +13,15 @@ $breakpoint: 42rem !default;
   width: 100%;
 
   > * {
+    max-width: 100%;
     width: 100%;
+    box-sizing: border-box;
+  }
+
+  > section,
+  > article,
+  > div {
+    padding: 0;
   }
 
   @media (min-width: $breakpoint) {
